--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "trezor.js": "trezor/trezor.js",
     "bitcoinjs-lib": "trezor/bitcoinjs-lib",
     "bootstrap-slider": "seiyria/bootstrap-slider#~1.9.0",
-    "jquery.atmosphere": "~1.0.13"
+    "jquery.atmosphere": "~1.0.13",
+    "unorm": "~1.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.10",
