--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular": "~1.2.10",
     "angular-qr": "~0.1.4",
     "angular-route": "~1.2.10",
+    "angular-sanitize": "~1.2.10",
     "angular-animate": "~1.2.10",
     "angular-strap": "~2.0.0",
     "bootstrap": "~3.1.0",
