--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "bootstrap-slider": "seiyria/bootstrap-slider#~1.9.0",
     "jquery.atmosphere": "~1.0.13",
     "unorm": "~1.3.2",
-    "jsqrcode": "LazarSoft/jsqrcode"
+    "jsqrcode": "LazarSoft/jsqrcode",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.10",
