--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,10 @@
     "trezor.js": "trezor/trezor.js",
     "bitcoinjs-lib": "trezor/bitcoinjs-lib",
     "bootstrap-slider": "seiyria/bootstrap-slider#~1.9.0",
-    "jquery.atmosphere": "~1.0.13",
     "unorm": "~1.3.2",
     "jsqrcode": "LazarSoft/jsqrcode",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "atmosphere": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.10",
