--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,7 @@
     "bootstrap-slider": "seiyria/bootstrap-slider#~1.9.0",
     "unorm": "~1.3.2",
     "jsqrcode": "LazarSoft/jsqrcode",
-    "lodash": "~2.4.1",
-    "atmosphere": "~2.1.4"
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.10",
