--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "bootstrap": "~3.1.0",
     "bootstrap-slider": "seiyria/bootstrap-slider#~1.9.0",
     "bitcoinjs-lib": "trezor/bitcoinjs-lib",
-    "trezor.js": "trezor/trezor.js",
+    "trezor.js": "trezor/trezor.js#trezord",
     "jsqrcode": "LazarSoft/jsqrcode"
   },
   "devDependencies": {
