--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-qr": "~0.1.4",
     "angular-route": "~1.2.16",
     "angular-bootstrap": "~0.11.0",
+    "angular-sanitize": "~1.2.21",
     "bootstrap": "~3.1.0",
     "bootstrap-slider": "seiyria/bootstrap-slider#~1.9.0",
     "bitcoinjs-lib": "trezor/bitcoinjs-lib",
