--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "bootstrap-slider": "seiyria/bootstrap-slider#~1.9.0",
     "bitcoinjs-lib": "trezor/bitcoinjs-lib",
     "trezor.js": "trezor/trezor.js#trezord",
-    "jsqrcode": "LazarSoft/jsqrcode"
+    "jsqrcode": "LazarSoft/jsqrcode",
+    "comma-separated-values": "~3.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.10",
