--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
   "name": "webwallet",
   "version": "0.0.0",
-  "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-autoprefixer": "~0.4.0",
-    "grunt-concurrent": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compass": "~0.6.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.3.0",
-    "grunt-contrib-jshint": "~0.7.1",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-google-cdn": "~0.2.0",
-    "grunt-ngmin": "~0.0.2",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~1.0.1",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-compass": "~1.0.1",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-htmlmin": "~0.3.0",
+    "grunt-contrib-imagemin": "~0.8.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-google-cdn": "~0.4.3",
+    "grunt-ng-annotate": "~0.4.0",
     "grunt-rev": "~0.1.0",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-usemin": "~2.0.0",
-    "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.0",
+    "grunt-svgmin": "~1.0.0",
+    "grunt-usemin": "~2.4.0",
+    "jshint-stylish": "~1.0.0",
+    "load-grunt-tasks": "~0.6.0",
+    "time-grunt": "~1.0.0",
     "karma-ng-scenario": "~0.1.0",
-    "grunt-karma": "~0.6.2",
+    "grunt-karma": "~0.9.0",
     "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.5",
+    "karma-firefox-launcher": "~0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.3",
-    "karma-requirejs": "~0.2.0",
-    "karma-coffee-preprocessor": "~0.1.0",
-    "karma": "~0.10.4",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "grunt-angular-templates": "~0.5.3"
+    "karma-jasmine": "~0.1.5",
+    "karma-requirejs": "~0.2.2",
+    "karma-coffee-preprocessor": "~0.2.1",
+    "karma": "~0.12.24",
+    "karma-ng-html2js-preprocessor": "~0.1.1",
+    "grunt-angular-templates": "~0.5.7"
   },
   "engines": {
     "node": ">=0.8.0"
