--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "jsqrcode": "LazarSoft/jsqrcode",
     "comma-separated-values": "~3.6.0"
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "resolutions": {
+    "angular": "~1.3.0"
   }
 }
