--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "app/data"]
 	path = app/data
-	url = git@github.com:trezor/webwallet-data.git
+	url = https://github.com/trezor/webwallet-data.git
